{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 185,
  "lineage": "ac817d1c-163c-ccad-af5d-c0b5744dae50",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:270823544663:route-table/rtb-06d3fa63514d958a3",
            "default_route_table_id": "rtb-06d3fa63514d958a3",
            "id": "rtb-06d3fa63514d958a3",
            "owner_id": "270823544663",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "private_route_vpc_default_route_table"
            },
            "tags_all": {
              "Name": "private_route_vpc_default_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-032d0afe3dd4d9c16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.pranesh_vpc",
            "module.vpc.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:270823544663:internet-gateway/igw-0050536ec4a121c58",
            "id": "igw-0050536ec4a121c58",
            "owner_id": "270823544663",
            "tags": {
              "Name": "pranesh-igw"
            },
            "tags_all": {
              "Name": "pranesh-igw"
            },
            "vpc_id": "vpc-032d0afe3dd4d9c16"
          },
          "dependencies": [
            "module.vpc.aws_vpc.pranesh_vpc",
            "module.vpc.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0050536ec4a121c58",
            "id": "r-rtb-07f61ba77b87fdcd21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07f61ba77b87fdcd2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_vpc.pranesh_vpc",
            "module.vpc.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:270823544663:route-table/rtb-07f61ba77b87fdcd2",
            "id": "rtb-07f61ba77b87fdcd2",
            "owner_id": "270823544663",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pranesh-rt-pub"
            },
            "tags_all": {
              "Name": "pranesh-rt-pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-032d0afe3dd4d9c16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.pranesh_vpc",
            "module.vpc.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004a2dc3f8333235a",
            "route_table_id": "rtb-07f61ba77b87fdcd2",
            "subnet_id": "subnet-0a1d91f3b21405ddf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.pranesh_public_subnets",
            "module.vpc.aws_vpc.pranesh_vpc",
            "module.vpc.data.aws_availability_zones.az",
            "module.vpc.random_integer.random",
            "module.vpc.random_shuffle.shuffle"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0b12a74290590bd",
            "route_table_id": "rtb-07f61ba77b87fdcd2",
            "subnet_id": "subnet-0328114885370b862"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.pranesh_public_subnets",
            "module.vpc.aws_vpc.pranesh_vpc",
            "module.vpc.data.aws_availability_zones.az",
            "module.vpc.random_integer.random",
            "module.vpc.random_shuffle.shuffle"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066e7e8ba2879af2d",
            "route_table_id": "rtb-07f61ba77b87fdcd2",
            "subnet_id": "subnet-0c6699f543ed3e8f8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.pranesh_public_subnets",
            "module.vpc.aws_vpc.pranesh_vpc",
            "module.vpc.data.aws_availability_zones.az",
            "module.vpc.random_integer.random",
            "module.vpc.random_shuffle.shuffle"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5df90094cf40d55",
            "route_table_id": "rtb-07f61ba77b87fdcd2",
            "subnet_id": "subnet-099f0adf5009c6797"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.pranesh_public_subnets",
            "module.vpc.aws_vpc.pranesh_vpc",
            "module.vpc.data.aws_availability_zones.az",
            "module.vpc.random_integer.random",
            "module.vpc.random_shuffle.shuffle"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pranesh_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:270823544663:subnet/subnet-0322c79415ddb9069",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0322c79415ddb9069",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "270823544663",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_1"
            },
            "tags_all": {
              "Name": "private_subnet_1"
            },
            "vpc_id": "vpc-032d0afe3dd4d9c16"
          },
          "dependencies": [
            "module.vpc.aws_vpc.pranesh_vpc",
            "module.vpc.data.aws_availability_zones.az",
            "module.vpc.random_integer.random",
            "module.vpc.random_shuffle.shuffle"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:270823544663:subnet/subnet-008e1abe323eb6f72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008e1abe323eb6f72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "270823544663",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_2"
            },
            "tags_all": {
              "Name": "private_subnet_2"
            },
            "vpc_id": "vpc-032d0afe3dd4d9c16"
          },
          "dependencies": [
            "module.vpc.aws_vpc.pranesh_vpc",
            "module.vpc.data.aws_availability_zones.az",
            "module.vpc.random_integer.random",
            "module.vpc.random_shuffle.shuffle"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:270823544663:subnet/subnet-0c544b4daf3b5ab99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "192.168.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c544b4daf3b5ab99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "270823544663",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_3"
            },
            "tags_all": {
              "Name": "private_subnet_3"
            },
            "vpc_id": "vpc-032d0afe3dd4d9c16"
          },
          "dependencies": [
            "module.vpc.aws_vpc.pranesh_vpc",
            "module.vpc.data.aws_availability_zones.az",
            "module.vpc.random_integer.random",
            "module.vpc.random_shuffle.shuffle"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:270823544663:subnet/subnet-029c54b55fc265bb6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029c54b55fc265bb6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "270823544663",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_4"
            },
            "tags_all": {
              "Name": "private_subnet_4"
            },
            "vpc_id": "vpc-032d0afe3dd4d9c16"
          },
          "dependencies": [
            "module.vpc.aws_vpc.pranesh_vpc",
            "module.vpc.data.aws_availability_zones.az",
            "module.vpc.random_integer.random",
            "module.vpc.random_shuffle.shuffle"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pranesh_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:270823544663:subnet/subnet-0a1d91f3b21405ddf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1d91f3b21405ddf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "270823544663",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_1"
            },
            "tags_all": {
              "Name": "public_subnet_1"
            },
            "vpc_id": "vpc-032d0afe3dd4d9c16"
          },
          "dependencies": [
            "module.vpc.aws_vpc.pranesh_vpc",
            "module.vpc.data.aws_availability_zones.az",
            "module.vpc.random_integer.random",
            "module.vpc.random_shuffle.shuffle"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:270823544663:subnet/subnet-0328114885370b862",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0328114885370b862",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "270823544663",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_2"
            },
            "tags_all": {
              "Name": "public_subnet_2"
            },
            "vpc_id": "vpc-032d0afe3dd4d9c16"
          },
          "dependencies": [
            "module.vpc.aws_vpc.pranesh_vpc",
            "module.vpc.data.aws_availability_zones.az",
            "module.vpc.random_integer.random",
            "module.vpc.random_shuffle.shuffle"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:270823544663:subnet/subnet-0c6699f543ed3e8f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "192.168.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6699f543ed3e8f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "270823544663",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_3"
            },
            "tags_all": {
              "Name": "public_subnet_3"
            },
            "vpc_id": "vpc-032d0afe3dd4d9c16"
          },
          "dependencies": [
            "module.vpc.aws_vpc.pranesh_vpc",
            "module.vpc.data.aws_availability_zones.az",
            "module.vpc.random_integer.random",
            "module.vpc.random_shuffle.shuffle"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:270823544663:subnet/subnet-099f0adf5009c6797",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099f0adf5009c6797",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "270823544663",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_4"
            },
            "tags_all": {
              "Name": "public_subnet_4"
            },
            "vpc_id": "vpc-032d0afe3dd4d9c16"
          },
          "dependencies": [
            "module.vpc.aws_vpc.pranesh_vpc",
            "module.vpc.data.aws_availability_zones.az",
            "module.vpc.random_integer.random",
            "module.vpc.random_shuffle.shuffle"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "pranesh_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:270823544663:vpc/vpc-032d0afe3dd4d9c16",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-07055731f119226f0",
            "default_route_table_id": "rtb-06d3fa63514d958a3",
            "default_security_group_id": "sg-01817fb64bec896b0",
            "dhcp_options_id": "dopt-05dbdfd62a40305a9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-032d0afe3dd4d9c16",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06d3fa63514d958a3",
            "owner_id": "270823544663",
            "tags": {
              "Name": "pranesh-vpc-46"
            },
            "tags_all": {
              "Name": "pranesh-vpc-46"
            }
          },
          "dependencies": [
            "module.vpc.random_integer.random"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}